--- a/stark_travel/nbproject/project.properties
+++ b/stark_travel/nbproject/project.properties
@@ -27,9 +27,27 @@ dist.dir=dist
 dist.jar=${dist.dir}/stark_travel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gs-algo-1.3-javadoc.jar=GS\\gs-algo-1.3\\gs-algo-1.3-javadoc.jar
+file.reference.gs-algo-1.3-sources.jar=GS\\gs-algo-1.3\\gs-algo-1.3-sources.jar
+file.reference.gs-algo-1.3.jar=GS\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-core-1.3-javadoc.jar=GS\\gs-core-1.3\\gs-core-1.3-javadoc.jar
+file.reference.gs-core-1.3-sources.jar=GS\\gs-core-1.3\\gs-core-1.3-sources.jar
+file.reference.gs-core-1.3.jar=GS\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-ui-1.3-javadoc.jar=GS\\gs-ui-1.3\\gs-ui-1.3-javadoc.jar
+file.reference.gs-ui-1.3-sources.jar=GS\\gs-ui-1.3\\gs-ui-1.3-sources.jar
+file.reference.gs-ui-1.3.jar=GS\\gs-ui-1.3\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gs-core-1.3-javadoc.jar}:\
+    ${file.reference.gs-core-1.3-sources.jar}:\
+    ${file.reference.gs-core-1.3.jar}:\
+    ${file.reference.gs-algo-1.3-javadoc.jar}:\
+    ${file.reference.gs-algo-1.3-sources.jar}:\
+    ${file.reference.gs-algo-1.3.jar}:\
+    ${file.reference.gs-ui-1.3-javadoc.jar}:\
+    ${file.reference.gs-ui-1.3-sources.jar}:\
+    ${file.reference.gs-ui-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
